test/classes/errors/nilability-init-field-arg/init-field-arg-nonnil-borrowed-from-oknil-owned.good
init-field-arg-nonnil-borrowed-from-oknil-owned.chpl:9: In initializer:
init-field-arg-nonnil-borrowed-from-oknil-owned.chpl:10: error: cannot assign to non-nilable borrowed MyClass from nilable owned MyClass?
